# mcp-host-runner

./: .env.example  .gitignore  Dockerfile  README.ko.md  README.md  build.sh  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py
app/api/: middleware.py  routes.py
app/core/: config.py  mcp_manager.py
app/models/: schemas.py
app/utils/: logger.py
